@@ -120,7 +120,7 @@ Various classes
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0.1, #7f7f7f), color-stop(1, #5b5b5b));
 	color: #fff;
 	font-size: 10px;
-	line-height: 16px;
+	line-height: 19px;
 	height: 20px;
 }
 
