@@ -1,5 +1,6 @@
 2010-05-29  Christian Kuhn  <lolli@schwarzbu.ch>
 
+	* Fixed bug #14513: Improve rendering of icons in t3-row-header (Thanks to Steffen Gebert)
 	* Follow-up to feature #14490: Add missing styles of login box (Thanks to Steffen Gebert)
 	* Fixed bug #14510: Increase width of module menu and navigation frame (Thanks to Steffen Gebert)
 
